K8S/app.yaml
apiVersion: v1
kind: Service
metadata:
  name: ms-carga
  namespace: carga-namespace
  labels:
    app.bancolombia.com.co/env: dev
    app.bancolombia.com.co/cost-center: pmo30825
    app.bancolombia.com.co/application-code: nu0014001
    app.bancolombia.com.co/project: lifecoach-capa-gestion
    app.bancolombia.com.co/pmo: pmo30825
spec:
  selector:
    app: lifecoach-capa-gestion
    pod: ms-carga-pod
  ports:
    - name: http
      targetPort: 8087
      port: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-carga-deployment
  namespace: carga-namespace
  labels:
    app.bancolombia.com.co/env: dev
    app.bancolombia.com.co/cost-center: pmo30825
    app.bancolombia.com.co/application-code: nu0014001
    app.bancolombia.com.co/project: lifecoach-capa-gestion
    app.bancolombia.com.co/pmo: pmo30825
spec:
  replicas: 1
  selector:
    matchLabels:
      pod: ms-carga-pod
  template:
    metadata:
      labels:
        app: lifecoach-capa-gestion
        pod: ms-carga-pod
        app.bancolombia.com.co/project: lifecoach-capa-gestion
        version: develop.39
    spec:
      containers:
        - name: ms-carga-container
          image: carga-test
          imagePullPolicy: Never
          resources:
            requests:
              memory: "50Mi"
              cpu: "50m"
            limits:
              memory: "200Mi"
              cpu: "300m"
          ports:
            - containerPort: 8087
